# VaultCraft

./: .env.example  .env.production.example  .env.staging.example  .gitignore  README.md  VaultCraft.code-workspace  pyproject.toml
apps/backend/: pyproject.toml
apps/backend/app/: ack_tracker.py  cli.py  daemon.py  events.py  exec_service.py  hyper_client.py  hyper_exec.py  main.py  navcalc.py  positions.py  price_provider.py  quant_keys.py  settings.py  snapshots.py  soak.py  user_listener.py
apps/backend/tests/: conftest.py  test_api.py  test_caching.py  test_cli.py  test_exec_api.py  test_exec_multivenue.py  test_exec_validation.py  test_positions_api.py  test_price_provider.py  test_quant_api.py  test_quant_keys.py  test_risk_api.py  test_snapshots.py  test_soak_runner.py  test_status_and_pretrade.py  test_user_listener.py
apps/vaultcraft-frontend/: package.json  pnpm-lock.yaml  vitest.setup.ts
apps/web/: package-lock.json  package.json  tailwind.config.ts
contracts/test/: Vault.t.sol
docs/: ARCHITECTURE.md  CONFIG.md  DEMO_PLAN.md  DEMO_PLAN.md.bak  DEPLOYMENT.md  FRONTEND_SPEC.md  HYPER_DEPLOYMENT.md  HYPER_INTEGRATION.md  ISSUES.md  PLAN_V1.md  PRD.md  PROGRESS.md  README.md  TECH_DESIGN.md  Vault Update.md
docs/architecture/: ARCHITECTURE.html  ARCHITECTURE.md  MULTI_MARKET_ADAPTER.md  TECH_DESIGN.md
docs/ops/: CONFIG.md  DEMO_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_ALPHA_CHECKLIST.md  PROGRESS.md
docs/product/: PLAN_V1.md  PRD.md  ROADMAP.md
hardhat/: .env.example  hardhat.config.ts  package-lock.json  package.json
scripts/: run_ci.py
(+31 files in other folders)
